--- a/index.html
+++ b/index.html
@@ -1,7 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
+    <style>
+        h1{
+            font-size: 40px;
+            text-decoration: underline;
+            color: teal;
+            font-weight:lighter;
+            text-decoration:line-through;
+            font-family: "Quicksand", sans-serif;
+            font-style: italic;
+        }
+        p{
+            font-size: 37px;
+            text-decoration: wavy;
+            color: rebeccapurple;
+            text-decoration: underline;
+            font-style: italic;
+            font-family: "Quicksand", sans-serif;
+            word-spacing: 0px;
+            letter-spacing: 0px;
+        }
+        .Selectors{
+            font-size: 30px;
+            color: green;
+            text-decoration: underline;
+            font-weight: lighter;
+            font-style: normal;
+
+        }
+
+.different{
+    font-size: 28px;
+    text-decoration: solid;
+    color: brown;
+    text-decoration: line-through;
+    font-style: oblique;
+
+
+}
+
+#pasta{
+    font-size: 39px;
+    text-decoration: solid ;
+    color: blue;
+}
+p,h1,li{
+    border: 1px solid red;
+}
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Part 2</title>
@@ -17,21 +68,28 @@
         <li>Internal CSS</li>
         <li>External CSS</li>
     </ol>
-<h4>Inline CSS  is the technique to define the single element with the insert style sheets in an HTML document.</h4>
-<h5>Internal CSS is used to define a style for a single HTML page.</h5>
-<h6>External CSS  is a form of CSS which is used to add styling to multiple HTML pages at a time.</h6>
+    <h4>Inline CSS is the technique to define the single element with the insert style sheets in an HTML document.</h4>
+    <h5>Internal CSS is used to define a style for a single HTML page.</h5>
+    <h6>External CSS is a form of CSS which is used to add styling to multiple HTML pages at a time.</h6>
+
+    <i class="fa-solid fa-house-laptop"></i>
+    <i class="fa-brands fa-searchengin"></i>
+    <i class="fa-solid fa-image"></i>
+    <i class="fa-regular fa-image"></i>
 
 
+<p class="different">With my new found skills with html and css i hope to build a personal brand, showcase my skills and portfolio, experiment with new technologies, create a blog or vlog and even develop a mobile app</p>
 
 
+<h1 class="Selectors">Css Selectors</h1>
+<ul>
+    <li>Name Selector(Element)</li>
+    <li>Class Selectors</li>
+    <li>ID Selectors</li>
+    <li>Multiple Selectors</li>
+</ul>
 
-
-
-
-
-
-
-
+<h1 id="Pasta">ID Selectors</h1>
 
 
 
